--- a/app/src/main/res/layout/cardview.xml
+++ b/app/src/main/res/layout/cardview.xml
@@ -113,6 +113,7 @@
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:id="@+id/mo"
+                android:buttonTint="@color/checkbox"
                 android:clickable="false"
                 android:layout_alignParentLeft="true"/>
             <CheckBox
@@ -120,6 +121,7 @@
                 android:layout_height="wrap_content"
                 android:text="Afternoon"
                 android:textSize="18sp"
+                android:buttonTint="@color/checkbox"
                 android:textStyle="bold"
                 android:clickable="false"
                 android:id="@+id/af"
@@ -132,6 +134,7 @@
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:clickable="false"
+                android:buttonTint="@color/checkbox"
                 android:layout_alignParentRight="true"/>
         </RelativeLayout>
 
@@ -141,8 +144,7 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:textSize="26dp"
-                android:textStyle="bold"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/black"
                 android:clickable="true"
                 android:id="@+id/feedback"
                 android:text="Add Feedback"/>
